--- a/package.json
+++ b/package.json
@@ -20,12 +20,9 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
-    "yup": "^1.3.2"
-    "react-native": "0.72.5",
+    "yup": "^1.3.2",
     "react-native-gif": "^1.0.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
