feat:state of the created form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
     "react"
   ],
   "rules": {
+    "prettier/prettier": 0,
     "react/react-in-jsx-scope": "off",
     "indent": [
       "error",
