--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@react-navigation/stack": "^6.3.18",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-font": "~11.4.0",
@@ -21,15 +23,14 @@
     "react-native": "0.72.5",
     "react-native-animatable": "^1.3.3",
     "react-native-loading-placeholder": "^0.0.6",
-    "react-native-reanimated": "^3.5.4",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shimmer-placeholder": "^2.0.9",
-    "zustand": "^4.4.3",
-    "react-native-svg": "^13.14.0",
+    "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
-    "yup": "^1.3.2"
-
+    "yup": "^1.3.2",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
