--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
     "react-native": "0.72.5",
+    "react-native-animatable": "^1.3.3",
+    "react-native-loading-placeholder": "^0.0.6",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "13.9.0",
     "styled-components": "^6.0.8",
     "yup": "^1.3.2",
