--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@react-native-async-storage/async-storage": "^1.19.3",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "axios": "^1.5.1",
@@ -25,11 +26,10 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-shimmer-placeholder": "^2.0.9",
-    "zustand": "^4.4.3",
     "react-native-svg": "^13.14.0",
     "styled-components": "^6.0.8",
-    "yup": "^1.3.2"
-
+    "yup": "^1.3.2",
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
