--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
     "@react-navigation/stack": "^6.3.18",
+    "@testing-library/react": "^14.0.0",
     "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "jest": "^29.7.0",
+    "jest-expo": "^49.0.0",
     "native-base": "^3.4.28",
     "react": "18.2.0",
     "react-hook-form": "^7.47.0",
@@ -33,8 +36,17 @@
     "yup": "^1.3.2",
     "zustand": "^4.4.3"
   },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
+  },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.3.0",
+    "@types/jest": "^29.5.5",
     "@types/react": "~18.2.14",
     "typescript": "^5.1.3"
   },
